18534
```scala
import scala.language.experimental.macros
import scala.reflect.macros.Context

object Test {
  def foo = macro impl

  def impl(c: Context) = {
    import c.universe._
    reify(Literal(Constant(42)))
  }
}
```
```scala
21:35 ~/Projects/210x/sandbox (2.10.x)$ s
Test.scala:5: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context): c.Expr[c.universe.Literal]
 found   : (c: scala.reflect.macros.Context): c.Expr[c.universe.Literal]
type mismatch for return type: c.Expr[c.universe.Literal] does not conform to c.Expr[c.universe.Literal]
  def foo = macro impl
                  ^
one error found
```
